# sensors_fusion

./: CMakeLists.txt  README.md  package.xml
data_fusion/: CMakeLists.txt  package.xml
data_fusion/launch/: ESR_Camera_receiver.launch
data_fusion/rviz_cfg/: camera_viewer.rviz
data_fusion/src/: cam_radar_sync.cpp  projection_utils.h
launch/: data_sync_lidar_camera.launch
object_detection/darknet_ros/darknet/examples/: detector.c
object_detection/darknet_ros/darknet/src/: demo.c
object_detection/darknet_ros/darknet_ros/: CMakeLists.txt
object_detection/darknet_ros/darknet_ros/config/: yolov2.yaml
object_detection/darknet_ros/darknet_ros/src/: YoloObjectDetector.cpp
object_detection/darknet_ros/darknet_ros/yolo_network_config/cfg/: yolov2.cfg
object_detection/haar_detection/src/: hog_svm.cpp  hog_svm.h
rviz_cfg/: covgrid_mapping.rviz  data_sync.rviz
sensors_fusion/: CMakeLists.txt  package.xml
sensors_fusion/launch/: data_sync_lidar_camera.launch
sensors_fusion/src/clusterers/: euclidean_clusterer.h
sensors_fusion/src/data_fusion/: data_sync.cpp  projection_utils.cpp
sensors_fusion/src/object_proposals_generation/: radar_proposals.cpp  radar_proposals.h
sensors_fusion/src/utils/: bounding_box.h  cloud.cpp
src/clusterers/: abstract_clusterer.h
src/data_fusion/: data_receiver.cpp  data_sync.cpp
src/object_detection/: haar_detection.cpp  haar_detection.h  hog_svm.h
src/object_proposals_generation/: abstract_proposals.h  radar_proposals.cpp  radar_proposals.h
src/utils/: CMakeLists.txt  bbox.cpp  bbox.h  cloud.h  pose.h  rich_point.cpp  utils.cpp  utils.h  velodyne_utils.cpp  velodyne_utils.h
